# axiom

./: pyproject.toml
axiom/models/: smm.py
axiom/vi/exponential/: mvn.py
axiom/vi/utils/: math.py
