[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom"
authors = [
    {name = "VERSES Research", email = "verses.research@verses.ai"},
]
description = "AXIOM: Learning to Play Games in Minutes with Expanding Object-Centric Models"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy",
    "jax",
    "opencv-python>=4.10.0",
    "wandb",
    "equinox",
    "optax",
    "mediapy",
    "moviepy",
    "rich",
    "multimethod>=1.12",
    "gameworld>=0.1.0",
]
version="0.1.0"

[tool.setuptools.packages.find]
include = ["axiom"]